[FEAT] 유저 위치 정보 저장시 Redis에 저장 / 내가 설정한 위치에 있는 책장 리턴 해주는 api