@@ -1,8 +1,15 @@
 package com.najackdo.server.domain.book.service;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -24,9 +31,17 @@ import lombok.extern.slf4j.Slf4j;
 @Transactional(readOnly = true)
 public class BookService {
 
+	private final RedisTemplate<String, Object> redisTemplate;
+
 	private final BookRepository bookRepository;
 	private final UserRepository userRepository;
 	private final InterestUserRepository interestUserRepository;
+
+	private static final String Location_KEY = "location:";
+
+	private static String apply(Object value) {
+		return ((Map<String, String>)value).get("value");
+	}
 
 	public List<BookData.BookCase> getBookCaseInterest(User user) {
 		List<UserBook> userBooks = bookRepository.findBookCaseInterestByUser(user);
@@ -109,12 +124,78 @@ public class BookService {
 	}
 
 	public List<BookData.BookCase> getNearBookCase(User user) {
-
 		log.info("user : {}", user);
 
-		BookData.BookCase bookCase = BookData.BookCase.of(user.getId(), true, user.getNickName(),
-			user.getProfileImage(), null);
+		String userLocationKey = Location_KEY + user.getId();
 
-		return List.of(bookCase);
+		Set<Object> myLocationCodes = redisTemplate.opsForSet().members(userLocationKey);
+
+		if (myLocationCodes == null || myLocationCodes.isEmpty()) {
+			return Collections.emptyList();
+		}
+		log.info("My location codes: {}", myLocationCodes);
+
+		Set<String> allUserKeys = redisTemplate.keys(Location_KEY + "*");
+		log.info("All user keys: {}", allUserKeys);
+
+		Set<String> allUserKeysWithOutMe = Objects.requireNonNull(allUserKeys).stream()
+			.filter(key -> !key.equals(userLocationKey))
+			.collect(Collectors.toSet());
+		log.info("All user keys without me: {}", allUserKeysWithOutMe);
+
+		Set<Long> nearUserIds = new HashSet<>();
+
+		for (String otherKey : allUserKeysWithOutMe) {
+			Set<Object> otherUserLocations = redisTemplate.opsForSet().members(otherKey);
+
+			if (otherUserLocations != null) {
+				for (Object location : myLocationCodes) {
+					if (otherUserLocations.contains(location)) {
+						nearUserIds.add(Long.valueOf(otherKey.replace(Location_KEY, "")));
+					}
+				}
+			}
+		}
+		log.info("Intersected locations: {}", nearUserIds);
+
+		if (nearUserIds.isEmpty()) {
+			return Collections.emptyList();
+		}
+
+		return getBookCasesForIntersectedUsers(user, nearUserIds);
+
 	}
+
+	public List<BookData.BookCase> getBookCasesForIntersectedUsers(User user, Set<Long> nearUserIds) {
+		List<BookData.BookCase> bookCases = new ArrayList<>();
+
+		for (Long userid : nearUserIds) {
+
+			User findUser = userRepository.findById(userid)
+				.orElseThrow(() -> new BaseException(ErrorCode.NOT_FOUND_USER));
+
+			boolean isFollow = interestUserRepository.existsByFollowerAndFollowing(user, findUser);
+
+			List<BookData.DisplayBook> displayBooks = bookRepository.findBookCaseByUserId(findUser).stream()
+				.map(userBook -> BookData.DisplayBook.of(
+					userBook.getBook().getId(),
+					userBook.getId(),
+					userBook.getBook().getCover(),
+					userBook.getBookStatus()
+				))
+				.collect(Collectors.toList());
+
+			bookCases.add(BookData.BookCase.of(
+				findUser.getId(),
+				isFollow,
+				findUser.getNickName(),
+				findUser.getProfileImage(),
+				displayBooks
+			));
+		}
+
+		return bookCases;
+	}
+
 }
+
